# zzGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  zzguard.yml
docs/: contributing-patterns.md  getting-started.md  methodology.md
docs/assets/: .gitkeep
tests/: __init__.py  conftest.py  test_ast_scanner.py  test_automation.py  test_bait.py  test_git_scanner.py  test_integration.py  test_metrics.py  test_providers.py  test_proxy.py  test_scanner.py  test_semgrep_scanner.py
zzguard/: __init__.py  __main__.py  cli.py
zzguard/automation/: __init__.py  batch.py  context.py  providers.py  proxy.py  runner.py
zzguard/bait/: __init__.py  generator.py  patterns.py  patterns_extended.py  patterns_go.py  patterns_javascript.py
zzguard/guardrails/: __init__.py  claude-code.md  copilot.md  cursor.md  windsurf.md
zzguard/models/: __init__.py  enums.py  findings.py  reports.py  run_manifest.py  test_case.py
zzguard/reporting/: __init__.py  json_report.py  metrics.py  sarif_report.py  summary.py
zzguard/scanner/: __init__.py  analyzer.py  ast_scanner.py  git_scanner.py  interface.py  regex_scanner.py  semgrep_scanner.py
zzguard/trap/: __init__.py  manifest.py  protocol.py
